--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fast-glob": "^3.2.11",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "unocss": "^0.43.0",
     "vite": "^2.9.9",
     "vite-plugin-eslint": "^1.6.1",
     "vite-plugin-svg-icons": "^2.0.1"
